# merge-multisample-vcf

./: .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  merge_gvcf_pipeline.smk  merge_sequential.smk  pyproject.toml  reblock_genomicsdb_gatk_pipeline.smk  run_merge_gvcf_pipeline.sh  run_merge_sequential.sh  run_reblock_genomicsdb_gatk_pipeline.sh
.planning/: PLAN.md
bcftools/: config_dummy.yaml  merge_sequential.smk  run_merge_sequential.sh
config/: config_dummy.yaml
deprecated/gatk/: DEPRECATED.md
gatk/: reblock_genomicsdb_gatk_pipeline.smk  run_reblock_genomicsdb_gatk_pipeline.sh
profiles/bih/: config.yaml
profiles/charite/: config.yaml
profiles/default/: config.yaml
profiles/local/: config.yaml
scripts/: generate_config.py  run_snakemake.sh
tests/: test_helpers.py
workflow/: Snakefile
workflow/envs/: bcftools.yaml
workflow/rules/: common.smk  helpers.py  merge.smk
